examples/non-examples/type-errors/not-a-function.kl
#lang "prelude.kl"

(example ((the Integer 42) 4 2))
